Include boundary data and setting country iso from env

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,6 @@ LOG=INFO
 DATABASE_URI=
 WAIT_HOSTS=
 
-
 STATE_VOLUME=
 BOUNDARY_DATA_VOLUME=
 
@@ -15,3 +14,11 @@ API_PASSWORD_HASH=
 
 RESTART_POLICY=always
 AHW_DOCKER_NETWORK=
+# Available Country codes
+# BFA for Burkina Faso
+# MLI for Mali
+# MRT for Mauritania
+# NER for Niger
+# SEN for Senegal
+# TCD for Chad
+COUNTRY_ISO_CODES=
