--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,15 +7,14 @@ services:
     command: sh -c "/wait && ./docker-entrypoint.sh && gunicorn --bind 0.0.0.0:8000 dustwarning:app"
     volumes:
       - ${STATE_VOLUME}:/data/state
-      - ${BOUNDARY_DATA_VOLUME}:/data/boundary_data
     environment:
       - DEBUG=False
       - WAIT_HOSTS=aemet_db:5432
       - WAIT_TIMEOUT=60
       - STATE_DIR=/data/state
-      - BOUNDARY_DATA_DIR=/data/boundary_data
       - SQLALCHEMY_DATABASE_URI=postgresql://${DB_USER}:${DB_PASSWORD}@aemet_db:5432/${DB_NAME}
       - FLASK_APP=dustwarning/__init__.py
+      - COUNTRY_ISO_CODES=${COUNTRY_ISO_CODES}
     ports:
       - 8000
   aemet-db:
