--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 LOG=INFO
 
+DB_IMAGE=
+
 STATE_VOLUME=
 
 GRAYLOG_HOST=
@@ -18,3 +20,6 @@ AHW_DOCKER_NETWORK=
 # SEN for Senegal
 # TCD for Chad
 COUNTRY_ISO_CODES=
+
+# use _armv7 for armv7 platform. Leave empty for x86_64
+DOCKER_COMPOSE_WAIT_PLATFORM_SUFFIX=
