--- a/.env.sample
+++ b/.env.sample
@@ -23,3 +23,4 @@ COUNTRY_ISO_CODES=
 
 # use _armv7 for armv7 platform. Leave empty for x86_64
 DOCKER_COMPOSE_WAIT_PLATFORM_SUFFIX=
+DOCKER_NETWORK_NAME=aemet
