Add VERIFY_SSL env

--- a/.env.sample
+++ b/.env.sample
@@ -20,6 +20,7 @@ AHW_DOCKER_NETWORK=
 # SEN for Senegal
 # TCD for Chad
 COUNTRY_ISO_CODES=
+VERIFY_SSL=True
 
 # use _armv7 for armv7 platform. Leave empty for x86_64
 DOCKER_COMPOSE_WAIT_PLATFORM_SUFFIX=
