--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - SQLALCHEMY_DATABASE_URI=postgresql://${DB_USER}:${DB_PASSWORD}@aemet_db:5432/${DB_NAME}
       - FLASK_APP=dustwarning/__init__.py
       - COUNTRY_ISO_CODES=${COUNTRY_ISO_CODES}
+      - VERIFY_SSL=${VERIFY_SSL:-True}
     ports:
       - 8000
   aemet-db:
